--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
   color: rgb(255, 102, 0);
   font-family: "Fira Code", monospace;
 }
+h1 {
+  margin-top: 10vh;
+}
 * {
   padding: 0;
   margin: 0;
